--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ copie <strong>tous</strong> les fichiers portant l'extension <code>.txt</code> d
 <p class="admonition-title">À faire</p>
 <p>En ligne de commande, tapez <code>firefox</code>. Que se passe t-il?</p>
 </div>
-<p>Les <strong>varaibles d'environnement</strong> sont des variables qui peuvent être appelées partout par tous les programmes. Elles stockent des informations considérées importantes commme:</p>
+<p>Les <strong>variables d'environnement</strong> sont des variables qui peuvent être appelées partout par tous les programmes. Elles stockent des informations considérées importantes commme:</p>
 <ul>
 <li>le nom de l'ordinateur, de l'utilisatateur</li>
 <li>le chemin du répertoire <code>TEMP</code> contenant les fichers temporaires</li>
