--- a/index.html
+++ b/index.html
@@ -1027,7 +1027,7 @@
   <h1>Accueil</h1>
 
 <figure>
-<p><img alt="Image title" src="img/logoNSIsite.png" width="400" />
+<p><img alt="" src="img/logoNSIsite.png" width="400" />
   </p>
 <figcaption> Numériques et Sciences Informatiques</figcaption>
 </figure>
