--- a/maths/intro.html
+++ b/maths/intro.html
@@ -456,7 +456,7 @@ Python est un langage de haut niveau (c'est-à-dire que sa syntaxe est proche du
 </ul>
 <p>Ci-dessous, l'environnement proposé par le logiciel <em>Thonny</em>:</p>
 <figure>
-<p><img alt="Image title" src="../img/presentation_thonny.png">
+<p><img alt="" src="../img/presentation_thonny.png">
 </img></p>
 <figcaption> Tous les environnements présentent les mêmes zones</figcaption>
 </figure>
