--- a/ressources.html
+++ b/ressources.html
@@ -1033,7 +1033,7 @@
 <li>Site pour apprendre à faire du <a href="https://ens-fr.gitlab.io/mkdocs/">mkdocs</a></li>
 <li>Site sympa pour apprendre l'algorithme et python <a href="https://py-rates.fr/">pyrates</a></li>
 <li>Site pour utiliser les commandes bash de linux <a href="http://luffah.xyz/bidules/Terminus/">terminus</a></li>
-<li>Site pour utiliser une version antérieure de ChatPGT: <a href="https://host974.com/gpt3/">chatGPT3</a></li>
+<li>Site pour utiliser une version antérieure de GPT: <a href="https://host974.com/gpt3/">GPT3</a></li>
 <li>Site pour récupérer les données que les géants du web ont sur vous: <a href="https://respectemesdatas.fr/">Respectemesdatas</a></li>
 </ul>
 
