--- a/term/stalin.html
+++ b/term/stalin.html
@@ -501,26 +501,30 @@
 <table class="table">
 <thead>
 <tr>
-<th scope="col">Primitives de l'interface</th>
-<th scope="col">Commentaires</th>
+<th align="left">Primitives de l'interface</th>
+<th align="left">Commentaires</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td><strong>creer_liste()</strong></td>
-<td>crée une liste vide</td>
+<td align="left"><strong>creer_liste()</strong></td>
+<td align="left">crée une liste vide</td>
 </tr>
 <tr>
-<td><strong>est_vide(L)</strong></td>
-<td>retourne un booléen indiquant si la liste est vide</td>
+<td align="left"><strong>est_vide(L)</strong></td>
+<td align="left">retourne un booléen indiquant si la liste est vide</td>
 </tr>
 <tr>
-<td><strong>inserer(L, e)</strong></td>
-<td>insérer l'élément <code>e</code> dans la liste <code>L</code></td>
+<td align="left"><strong>inserer(L, e)</strong></td>
+<td align="left">insérer l'élément <code>e</code> dans la liste <code>L</code></td>
 </tr>
 <tr>
-<td><strong>affiche_tete(L)</strong></td>
-<td>affiche le premier élément de la liste <code>L</code></td>
+<td align="left"><strong>affiche_tete(L)</strong></td>
+<td align="left">affiche le premier élément de la liste <code>L</code></td>
+</tr>
+<tr>
+<td align="left">{: .tabnsi :}</td>
+<td align="left"></td>
 </tr>
 </tbody>
 </table>
