--- a/prem/widget.html
+++ b/prem/widget.html
@@ -468,7 +468,7 @@
 <p class="admonition-title">Étape3: les variables globales</p>
 <p>Une variable <strong>globale</strong> est une variable qui peut être appelée partout dans le programme. Nous souhaiterions ici créer <strong>trois variables</strong> qui seront associer à la valeur saisie dans les champs prévus à cet effet. </p>
 </div>
-<p>Dans <code>tkinter</code>, les variables globales sont les <strong>variables de contrôle</strong>(voir <a href="http://tkinter.fdex.eu/doc/ctrvar.html">ici</a>): elles sont associées à la valeur ou au texte saisie dans les widgets qui le permettent!</p>
+<p>Dans <code>tkinter</code>, les variables globales sont les <strong>variables de contrôle</strong>(voir <a href="https://profjahier.github.io/html/NSI/tkinter/doc_EFlorent_allegee/doc/ctrvar.html">ici</a>): elles sont associées à la valeur ou au texte saisie dans les widgets qui le permettent!</p>
 <div class="admonition exo">
 <p class="admonition-title">Ajouter des variables de contrôles</p>
 <ol>
