--- a/prem/widget.html
+++ b/prem/widget.html
@@ -551,7 +551,7 @@
 <div class="admonition exo">
 <p class="admonition-title"> Utiliser une échelle </p>
 <p>Au lieu de saisir les valeurs, on souhaite utiliser des échelles qui permettent à l'aide de curseur de choisir la valeur de la composante de rouge, de vert ou de bleu(voir ci-dessous...).</p>
-<p>Documentez-vous par exemple <a href="http://tkinter.fdex.eu/doc/scw.html">ici</a> et remplacez les entrées par trois échelles.</p>
+<p>Documentez-vous par exemple <a href="https://profjahier.github.io/html/NSI/tkinter/doc_EFlorent_allegee/doc/scw.html">ici</a> et remplacez les entrées par trois échelles.</p>
 </div>
 <p><center>
 <img alt="fenetre_a_realiser" src="img/interface_couleur_scale.png">
