--- a/prem/index_tpbash.html
+++ b/prem/index_tpbash.html
@@ -629,6 +629,8 @@ copie <strong>tous</strong> les fichiers portant l'extension <code>.txt</code> d
 <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <script src="../xtra/javascripts/interpreter.js"></script>
 <script src="../xtra/javascripts/config.js"></script>
+<script src="../xtra/gifplayer/gif-player.es6.js"></script>
+<script src="../xtra/webcomponentsjs/webcomponents-loader.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/rod2ik/cdn@main/mkdocs/javascripts/massilia-admonitions.js"></script>
 </body>
 </html>
