--- a/term/complex_struc.html
+++ b/term/complex_struc.html
@@ -618,6 +618,8 @@ moyenne » en <code>O(1)</code>.</p>
 <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <script src="../xtra/javascripts/interpreter.js"></script>
 <script src="../xtra/javascripts/config.js"></script>
+<script src="../xtra/gifplayer/gif-player.es6.js"></script>
+<script src="../xtra/webcomponentsjs/webcomponents-loader.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/rod2ik/cdn@main/mkdocs/javascripts/massilia-admonitions.js"></script>
 </body>
 </html>
