--- a/term/recursivite.html
+++ b/term/recursivite.html
@@ -554,6 +554,8 @@ Plus précisément, la pile d’exécution est un emplacement mémoire destiné 
 <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <script src="../xtra/javascripts/interpreter.js"></script>
 <script src="../xtra/javascripts/config.js"></script>
+<script src="../xtra/gifplayer/gif-player.es6.js"></script>
+<script src="../xtra/webcomponentsjs/webcomponents-loader.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/rod2ik/cdn@main/mkdocs/javascripts/massilia-admonitions.js"></script>
 </body>
 </html>
