--- a/term/reseau_term.html
+++ b/term/reseau_term.html
@@ -671,6 +671,8 @@ Donc à chaque envoi, il y a trois étapes illustrées par la figure ci-dessous.
 <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <script src="../xtra/javascripts/interpreter.js"></script>
 <script src="../xtra/javascripts/config.js"></script>
+<script src="../xtra/gifplayer/gif-player.es6.js"></script>
+<script src="../xtra/webcomponentsjs/webcomponents-loader.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/rod2ik/cdn@main/mkdocs/javascripts/massilia-admonitions.js"></script>
 </body>
 </html>
