--- a/prem/frontend.html
+++ b/prem/frontend.html
@@ -33,8 +33,8 @@
 <!-- Ajouter 17 february pour tables massilia-->
 <script defer="" src="../js/massilia.js"></script>
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,300i,400,400i,700,700i%7CRoboto+Mono:400,400i,700,700i&amp;display=fallback" rel="stylesheet"/>
-<style>:root{--md-text-font:"IBM Plex Mono";--md-code-font:"Roboto Mono"}</style>
+<link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,700,700i%7CRoboto+Mono:400,400i,700,700i&amp;display=fallback" rel="stylesheet"/>
+<style>:root{--md-text-font:"Ubuntu";--md-code-font:"Roboto Mono"}</style>
 <link href="../xtra/stylesheets/extra.css" rel="stylesheet"/>
 <link href="../xtra/stylesheets/pyoditeur.css" rel="stylesheet"/>
 <link href="../xtra/stylesheets/ajustements.css" rel="stylesheet"/>
