Cours ARchi Prem

--- a/prem/widget.html
+++ b/prem/widget.html
@@ -50,7 +50,7 @@
 <input autocomplete="off" class="md-toggle" data-md-toggle="search" id="__search" type="checkbox"/>
 <label class="md-overlay" for="__drawer"></label>
 <div data-md-component="skip">
-<a class="md-skip" href="#creation-de-widget-par-la-bibliotheque-tkinter">1. 
+<a class="md-skip" href="#creation-de-widget-par-la-bibliotheque-tkinter">
           Aller au contenu
         </a>
 </div>
