--- a/term/reseau_term.html
+++ b/term/reseau_term.html
@@ -50,7 +50,7 @@
 <input autocomplete="off" class="md-toggle" data-md-toggle="search" id="__search" type="checkbox"/>
 <label class="md-overlay" for="__drawer"></label>
 <div data-md-component="skip">
-<a class="md-skip" href="#rappel-sur-les-reseaux">1. 
+<a class="md-skip" href="#rappel-sur-les-reseaux">
           Aller au contenu
         </a>
 </div>
