--- a/term/routage.html
+++ b/term/routage.html
@@ -50,7 +50,7 @@
 <input autocomplete="off" class="md-toggle" data-md-toggle="search" id="__search" type="checkbox"/>
 <label class="md-overlay" for="__drawer"></label>
 <div data-md-component="skip">
-<a class="md-skip" href="#introduction">1. 
+<a class="md-skip" href="#introduction">
           Aller au contenu
         </a>
 </div>
