--- a/prem/traitement_texte.html
+++ b/prem/traitement_texte.html
@@ -1453,7 +1453,7 @@ Construire un fichier <code>fichier_test_melange.txt</code> où on a échangé l
 <span class="n">fichier_1</span> <span class="o">=</span> <span class="s1">&#39;fichier_test_filtre.txt&#39;</span> <span class="c1">#fichier d&#39;étude</span>
 <span class="n">fichier_etude_1</span> <span class="o">=</span> <span class="nb">open</span><span class="p">(</span><span class="n">fichier_1</span><span class="p">,</span><span class="s1">&#39;r&#39;</span><span class="p">)</span>
 <span class="n">f_1</span> <span class="o">=</span> <span class="n">fichier_etude_1</span><span class="o">.</span><span class="n">read</span><span class="p">()</span>
-<span class="c1">#########################################################################################################################################</span>
+<span class="c1">####################################################################</span>
 <span class="n">fig</span><span class="p">,</span> <span class="n">ax</span> <span class="o">=</span> <span class="n">plt</span><span class="o">.</span><span class="n">subplots</span><span class="p">()</span>
 
 <span class="n">minus</span> <span class="o">=</span> <span class="p">[</span><span class="nb">chr</span><span class="p">(</span><span class="n">i</span><span class="p">)</span> <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">97</span><span class="p">,</span> <span class="mi">123</span><span class="p">)]</span> <span class="c1">#liste en abscisse</span>
@@ -1465,7 +1465,7 @@ Construire un fichier <code>fichier_test_melange.txt</code> où on a échangé l
        <span class="n">ylim</span> <span class="o">=</span> <span class="p">(</span><span class="mi">0</span><span class="p">,</span> <span class="mf">0.15</span><span class="p">),</span> <span class="n">yticks</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">arange</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span><span class="mf">0.15</span><span class="p">,</span><span class="mf">0.02</span><span class="p">))</span>
 
 <span class="n">plt</span><span class="o">.</span><span class="n">show</span><span class="p">()</span>
-<span class="c1">#########################################################################################################################################</span>
+<span class="c1">######################################################################</span>
 <span class="n">fichier_etude_1</span><span class="o">.</span><span class="n">close</span><span class="p">()</span>
 </code></pre></div>
 <div class="admonition exercice">
