--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="md-header__topic" data-md-component="header-topic">
           <span class="md-ellipsis">
             
-              Index
+              Lycée Jean Baptiste de Baudre
             
           </span>
         </div>
